# zk-audio-provenance

./: .gitignore  .gitmodules  ARTIFACT-APPENDIX.md  LICENSE  README.md  audio_commands.md
comparisons/TilesProof/: generate_proof_crop.py  tiles_setup.sh  verify_proof.py
comparisons/TilesProof/scripts/: compile_circuit.sh
comparisons/VerITAS_FRI/: Cargo.toml  README.md
comparisons/VerITAS_FRI/examples/: oneCrop.rs  threeGray.rs
comparisons/VerITAS_FRI/images/: requirements.txt
comparisons/VerITAS_KZG/: README.md
comparisons/VerITAS_KZG/examples/: fullCropKZG.rs  fullGrayKZG.rs  oneHash.rs
comparisons/vimz/: README.md
comparisons/vimz/circuits/: grayscale_step_22.circom  grayscale_step_23.circom  grayscale_step_25.circom  optimized_crop_step_21.circom  optimized_crop_step_25.circom
comparisons/vimz/py_modules/: get_proof_size.py  requirements.txt
hyperveritas-audio/: README.md  hyperveritas_setup.sh  install.sh
hyperveritas-audio/comparisons/TilesProof/: README.md  generate_proof_gray.py  requirements.txt
hyperveritas-audio/comparisons/VerITAS_FRI/: .gitignore  veritas_fri_setup.sh
hyperveritas-audio/comparisons/VerITAS_KZG/: Cargo.toml  veritas_kzg_setup.sh
hyperveritas-audio/comparisons/vimz/: benchmark.sh  vimz_setup.sh
hyperveritas-audio/hyperveritas_impl/: .gitignore  Cargo.toml
hyperveritas-audio/hyperveritas_impl/audio/: helper.py  helper_float32.py
hyperveritas-audio/hyperveritas_impl/examples/: com_hash_basefold.rs  com_hash_basefold_fri.rs  com_hash_brakedown.rs  hv_crop_basefold_fri.rs  hv_crop_brakedown.rs  hv_crop_brakedown_prove.rs  hv_crop_brakedown_verify.rs  hv_gray_pst.rs  hv_mono_basefold.rs  hv_mono_brakedown.rs  hv_mono_pst.rs  hv_trim_basefold.rs  hv_trim_brakedown.rs  hv_trim_pst.rs  hv_volume_basefold.rs  hv_volume_brakedown.rs  hv_volume_brakedown_prove.rs  hv_volume_brakedown_verify.rs  hv_volume_pst.rs  iop_basefold_fri.rs  iop_zeromorph.rs
hyperveritas-audio/hyperveritas_impl/images/: helper.py
hyperveritas-audio/hyperveritas_impl/src/: audio.rs  audio_prover.rs  helper.rs  lib.rs  types.rs
hyperveritas-audio/plonkish_basefold/: .gitignore  README.md
hyperveritas_impl/: .gitignore  Cargo.toml
hyperveritas_impl/examples/: com_hash_brakedown_256.rs  com_hash_brakedown_64.rs  com_hash_pst.rs  com_hash_zeromorph.rs  hv_crop_basefold.rs  hv_crop_brakedown_256.rs  hv_crop_brakedown_64.rs  hv_crop_pst.rs  hv_crop_zeromorph.rs  hv_gray_basefold.rs  hv_gray_basefold_fri.rs  hv_gray_brakedown.rs  hv_gray_brakedown_256.rs  hv_gray_brakedown_64.rs  hv_gray_zeromorph.rs  iop_basefold.rs  iop_brakedown.rs  iop_brakedown_256.rs  iop_brakedown_64.rs
hyperveritas_impl/images/: convert.py
hyperveritas_impl/src/: helper.rs  image.rs  lib.rs  prover.rs
web/: .gitignore  README.md  package-lock.json  package.json
web/backend/: package.json
web/backend/src/: app.ts  lambda.ts
web/benchmark/: ec2-userdata.sh  run-benchmarks.sh  setup-ec2.sh
web/demo/: README.md
web/demo/articles/: authentic-article.html  fake-article.html
web/demo/extension/: badge.css  content.js  manifest.json  popup.html  popup.js
web/frontend/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/frontend/src/: App.tsx
web/infrastructure/: package.json  tsconfig.json
web/prover/: Dockerfile  entrypoint.sh
web/shared/: constants.ts  package.json  types.ts
web/wasm/: Cargo.toml
web/wasm/src/: helpers.rs  lib.rs  verifier.rs
zk-location-float/audio/: README.md  audio_authentic.go  audio_tremolo.go  audio_trim.go  mimc_helper.go
(+91 files in other folders)
