[package]
name = "hyperveritas_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

# HyperVerITAS dependencies
hyperveritas_impl = { path = "../../hyperveritas-audio/hyperveritas_impl", default-features = false, features = [] }

# Hyperplonk dependencies (needed by verifier directly)
arithmetic = { path = "../../hyperveritas-audio/hyperplonk/arithmetic" }
transcript = { path = "../../hyperveritas-audio/hyperplonk/transcript" }
subroutines = { path = "../../hyperveritas-audio/hyperplonk/subroutines" }

# Plonkish backend (Brakedown PCS, SumCheck, transcript, fields)
plonkish_backend = { path = "../../hyperveritas-audio/plonkish_basefold/plonkish/plonkish_backend", default-features = false, features = ["sanity-check"] }

# Ark dependencies - no std, no parallel, no asm
ark-ff = { version = "^0.4.0", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
ark-ec = { version = "^0.4.0", default-features = false }
ark-serialize = { version = "^0.4.0", default-features = false }
ark-poly = { version = "^0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"] }

rand_chacha = { version = "0.3.1", default-features = false }

[profile.release]
opt-level = "s"
lto = true
